--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
 								<li class="far fa-paper-plane">
 									<h3 style="font-family: 'Comic Sans MS', arial;">TELEGRAM</h3>
 									<p style="font-family: 'Comic Sans MS', arial;">ENTRA A FAR PARTE DEL NOSTRO CANALE TELEGRAM</p>
-									<button type="button" onClick="window.open('https://t.me/PhantomRealmChat', '_self')">CLICK</button>
+									<button type="button" onClick="window.open('https://t.me/PhantomRealmChat', '_blank')">CLICK</button>
 								</li>
 								<li class="fab fa-discord">
 									<h3 style="font-family: 'Comic Sans MS', arial;">DISCORD</h3>
 									<P style="font-family: 'Comic Sans MS', arial;">ENTRA A FAR PARTE DEL NOSTRO GRUPPO DISCORD</P>
-									<button type="button" onClick="window.open('https://discord.gg/gZWfPy8nqk', '_self')">CLICK</button>
+									<button type="button" onClick="window.open('https://discord.gg/gZWfPy8nqk', '_blank')">CLICK</button>
 								</li>
 							</ul>
 						</div>
