--- a/regole.html
+++ b/regole.html
@@ -92,7 +92,7 @@
 												</tr>
 												<tr>
 													<td>7. Minacce di Ddoss (Verso player/staff/server)</td>
-													<td>7 » = mute di 1 giorno + mute di 1 giorno</td>
+													<td>mute di 1 giorno + mute di 1 giorno</td>
 												</tr>
 												<tr>
 													<td>8. Far crashare il server (Ddos o altro)</td>
@@ -184,7 +184,7 @@
 												</tr>
 												<tr>
 													<td>30. Mute evading</td>
-													<td>30 » = ban di 1 giorno + ban di 1 giorno</td>
+													<td>ban di 1 giorno + ban di 1 giorno</td>
 												</tr>
 												<tr>
 													<td>31. Avere un nickname irrispettoso</td>
